cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(main C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_executable(main main.c TISM.c TISM_EventLogger.c TISM_IRQHandler.c TISM_Postman.c TISM_Scheduler.c TISM_SoftwareTimer.c TISM_TaskManager.c TISM_Watchdog.c)
pico_enable_stdio_usb(main 1)
pico_enable_stdio_uart(main 0)
target_link_libraries(main pico_stdlib pico_multicore hardware_pwm hardware_gpio hardware_irq)
pico_add_extra_outputs(main)
