cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(TISM C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_executable(TISM main.c TISM.c TISM_EventLogger.c TISM_IRQHandler.c TISM_Postman.c TISM_Scheduler.c TISM_SoftwareTimer.c TISM_UartMX.c TISM_Watchdog.c TISM_NetworkManager.c TISM_Console.c)
pico_enable_stdio_usb(TISM 1)
pico_enable_stdio_uart(TISM 0)
target_link_libraries(TISM pico_stdlib pico_multicore hardware_pwm hardware_uart hardware_gpio hardware_irq hardware_watchdog)
pico_add_extra_outputs(TISM)
